--- a/style.css
+++ b/style.css
@@ -80,8 +80,8 @@ main {
   gap: 34px;
 }
 
-.article {
-  max-width: 800px;
+.matter {
+  max-width: 803px;
 }
 
 /* main > img {
@@ -89,6 +89,10 @@ main {
   aspect-ratio: 16/9;
   object-fit: cover;
 } */
+
+.matter img {
+  width: 100%;
+}
 
 .title {
   margin: 31px 0;
@@ -113,7 +117,7 @@ main {
   transform: rotate(180deg);
 }
 
-.article p {
+.matter p {
   font-size: 1.6rem;
   line-height: 2.4rem;
   font-weight: 400;
@@ -129,7 +133,7 @@ footer {
   font-size: 1.6rem;
 }
 
-.related-article h2 {
+.related-matter h2 {
   font-size: 2.4rem;
   font-weight: 700;
   padding-bottom: 3.2rem;
@@ -137,6 +141,7 @@ footer {
 
 li {
   list-style: none;
+  max-width: 382px;
 }
 
 li a {
@@ -148,6 +153,8 @@ li a {
 }
 
 li a img {
+  width: 152px;
+  height: 84px;
   grid-row: 1/3;
 }
 
@@ -169,9 +176,125 @@ a p {
   color: var(--color-black-200);
 }
 
+/* Responsividade */
+
 @media (max-width: 1300px) {
   .container {
     padding-left: 20px;
     padding-right: 20px;
+  }
+
+  .related-matter h2 {
+    text-align: center;
+  }
+
+  li a {
+    display: block;
+  }
+
+  li {
+    align-items: center;
+    text-align: center;
+  }
+  li a h3 {
+    padding: 10px 0;
+    font-size: 1.6rem;
+    line-height: 2.2rem;
+  }
+}
+
+@media (max-width: 1040px) {
+  main {
+    flex-direction: column;
+  }
+
+  li {
+    max-width: 300px;
+    text-align: center;
+  }
+
+  .related-matter {
+    text-align: center;
+  }
+
+  ul {
+    display: flex;
+    gap: 10px;
+  }
+}
+
+@media (max-width: 850px) {
+  header {
+    box-shadow: none;
+  }
+
+  main {
+    padding: 0;
+  }
+
+  main.container {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  ul {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .matter .title,
+  .matter p {
+    padding: 0 22px;
+  }
+
+  .title {
+    display: block;
+  }
+
+  .title h1 {
+    font-size: 3.4rem;
+  }
+
+  .title > img {
+    margin-top: 8px;
+  }
+
+  .related-matter {
+    padding: 0 22px;
+  }
+
+  .related-matter h2 {
+    text-align: left;
+  }
+
+  ul {
+    gap: 0;
+  }
+
+  li {
+    max-width: 482px;
+  }
+
+  li a h3,
+  li a p {
+    text-align: left;
+    padding: 0;
+  }
+
+  li a h3 {
+    font-size: 1.9rem;
+  }
+
+  li a {
+    padding-bottom: 3.2rem;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    gap: 15px;
+  }
+
+  li a img {
+    width: 152px;
+    height: 84px;
+    grid-row: 1/3;
   }
 }
